# lux-robotics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
driver/: CMakeLists.txt
driver/include/lux/driver/camera/: ImageSequence.hpp  ImageSequenceCapture.hpp  VideoCapture.hpp  VideoRecorder.hpp  ZEDCamera.hpp
driver/include/lux/driver/gps/: GPSBase.hpp  ReplayGPS.hpp
driver/include/lux/robotics/driver/camera/: ImageSequence.hpp  ImageSequenceCapture.hpp  VideoCapture.hpp
driver/include/lux/robotics/driver/gps/: GPSBase.hpp  ReplayGPS.hpp
driver/src/: GPSBase.cpp  ImageSequence.cpp  ImageSequenceCapture.cpp  ReplayGPS.cpp  VideoRecorder.cpp  ZEDCamera.cpp
estimator/: CMakeLists.txt
estimator/include/lux/estimator/: KalmanFilter.hpp
executable/: CMakeLists.txt
executable/map_viewer/: CMakeLists.txt
executable/map_viewer/include/: BaseScene.h  MainWindow.h  MapViewer.h
executable/map_viewer/src/: BaseScene.cpp  MainWindow.cpp  MapViewer.cpp  main.cpp
executable/map_viewer/ui/: MainWindow.ui
include/: KalmanFilter.hpp
modules/: CMakeLists.txt
modules/dataset/: CMakeLists.txt
modules/dataset/kitti/: CMakeLists.txt
modules/dataset/kitti/include/dataset/: KITTI.hpp
modules/dataset/kitti/src/: KITTI.cpp
modules/dataset/rosbag/: CMakeLists.txt
modules/dataset/rosbag/include/dataset/: Record.hpp  Rosbag.hpp
modules/dataset/rosbag/src/: Record.cpp  Rosbag.cpp
modules/driver/: CMakeLists.txt
modules/driver/camera/: CMakeLists.txt
modules/driver/camera/common/: CMakeLists.txt
modules/driver/camera/common/include/driver/camera/: BinocularCamera.hpp  CameraBase.hpp  VideoCapture.hpp  VideoRecorder.hpp
modules/driver/camera/common/include/driver/camera/common/: BinocularCamera.hpp  CameraBase.hpp  VideoCapture.hpp  VideoRecorder.hpp
modules/driver/camera/common/src/: VideoRecorder.cpp
modules/driver/camera/virtual/: CMakeLists.txt
modules/driver/camera/virtual/include/driver/camera/: ImageSequence.hpp  ImageSequenceCapture.hpp
modules/driver/camera/virtual/src/: ImageSequence.cpp  ImageSequenceCapture.cpp
modules/driver/camera/zed/: CMakeLists.txt
modules/driver/camera/zed/include/driver/camera/: ZEDCamera.hpp
modules/driver/camera/zed/include/driver/camera/zed/: ZEDCamera.hpp
modules/driver/camera/zed/src/: ZEDCamera.cpp
modules/driver/gps/: CMakeLists.txt
modules/driver/gps/common/: CMakeLists.txt
modules/driver/gps/common/include/driver/gps/: GPSBase.hpp
modules/driver/gps/common/include/driver/gps/common/: GPSBase.hpp
modules/driver/gps/common/src/: GPSBase.cpp
modules/driver/gps/fake_gps/: CMakeLists.txt
modules/driver/gps/fake_gps/include/driver/gps/: FakeGPS.hpp
modules/driver/gps/fake_gps/src/: FakeGPS.cpp
modules/driver/gps/replay/: CMakeLists.txt
modules/driver/gps/replay/include/driver/gps/: ReplayGPS.hpp
modules/driver/gps/replay/src/: ReplayGPS.cpp
modules/estimator/: CMakeLists.txt
modules/estimator/include/estimator/: KalmanFilter.hpp
modules/system/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/utils/dataset_support/kitti/: CMakeLists.txt
modules/utils/dataset_support/kitti/include/utils/dataset_support/: KITTI.hpp
modules/utils/dataset_support/kitti/src/: KITTI.cpp
odometer/: CMakeLists.txt
odometer/include/lux/odometer/: CVFeatureMatcher.hpp  EpipolarGeometry.hpp
odometer/include/lux/robotics/odometer/: CVFeatureMatcher.hpp  FeatureDetector.hpp  FeatureMatcher.hpp
odometer/src/: CVFeatureMatcher.cpp  EpipolarGeometry.cpp  FeatureDetector.cpp
src/: main.cpp
test/: CMakeLists.txt  camera_viewer.cpp  feature_extraction.cpp  kalman_filter_test.cpp  replay_gps_test.cpp  rosbag_load_test.cpp  virtual_camera_test.cpp  zed_camera_record.cpp  zed_camera_viewer.cpp
